- Adding curveHash - Adding secp256k1 - Fix build on ubuntu 18 04

--- a/Makefile.am
+++ b/Makefile.am
@@ -7,9 +7,8 @@ endif
 
 EXTRA_DIST	= example-cfg.json nomacro.pl
 
-SUBDIRS		= compat
-
-ALL_INCLUDES	= @PTHREAD_FLAGS@ -fno-strict-aliasing $(JANSSON_INCLUDES) -I.
+SUBDIRS		= secp256k1 compat
+ALL_INCLUDES	= @PTHREAD_FLAGS@ -fno-strict-aliasing $(JANSSON_INCLUDES) -I$(top_srcdir)/secp256k1/include -I.
 
 bin_PROGRAMS	= cpuminer
 
@@ -117,7 +116,8 @@ cpuminer_SOURCES = \
   algo/x17.c \
   algo/xevan.c \
   algo/yescrypt.c \
-  algo/zr5.c
+  algo/zr5.c \
+  algo/curvehash.c
 
 disable_flags =
 
@@ -139,9 +139,11 @@ endif
 if HAVE_WINDOWS
    cpuminer_SOURCES += compat/winansi.c
 endif
-
+LIBSECP256K1=secp256k1/libsecp256k1.la
+$(LIBSECP256K1): $(wildcard secp256k1/src/*) $(wildcard secp256k1/include/*)
+	$(AM_V_at)$(MAKE) $(AM_MAKEFLAGS) -C $(@D) $(@F)
 cpuminer_LDFLAGS	= @LDFLAGS@
-cpuminer_LDADD	= @LIBCURL@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@
+cpuminer_LDADD	= @LIBCURL@ @JANSSON_LIBS@ @PTHREAD_LIBS@ @WS2_LIBS@ $(LIBSECP256K1)
 cpuminer_CPPFLAGS = @LIBCURL_CPPFLAGS@ $(ALL_INCLUDES)
 cpuminer_CFLAGS   = -Wno-pointer-sign -Wno-pointer-to-int-cast $(disable_flags)
 
